--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <span class="text-gradient">Algo-Visualizer</span>
     </h1>
     <p class="overlay__description">
-      <strong>Algo - Visualizer  <span class="text-gradient">(Sorting and Pathinding Algorithm Visualizer)</span></strong> is a web app developed for visualizing the working of a bunch of sorting and path finding algorithms in an animated way with the features such as array size control functionality, custom array value inputs, algorithm visualization speed control and different types of mazes and patterns.
+      <strong>Algo - Visualizer  <span class="text-gradient">(Sorting Algorithm Visualizer)</span></strong> is a web app developed for visualizing the working of a bunch of sorting algorithms in an animated way with the features such as array size control functionality, custom array value inputs, algorithm visualization speed control and much more.
     </p>
      <script src="script.js"></script>
     <div class="overlay__btns">
